[package]
name = "rust_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is_executable = "1.0.1"
structopt = "0.3.26"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
